# boterview

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  pyproject.toml
.github/workflows/: documentation.yaml
docs/: .prettierrc
docs/.vitepress/: config.mts
docs/.vitepress/assets/css/: styles.css
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: Footer.vue  Hero.vue
docs/.vitepress/theme/layouts/: Layout.vue
docs/content/: index.md
docs/content/guide/: what-is-boterview.md
frontend/app/: vite.config.ts
frontend/app/src/: App.tsx
frontend/app/src/components/: Footer.tsx  PageContent.tsx
frontend/chat/public/: chainlit.css  chainlit.js
src/boterview/: __init__.py
src/boterview/backend/: boterview.py  closing.py  condition.py  configuration.py  conversation.py  counter.py  guide.py  helpers.py  interview.py  introduction.py  participant.py  printable.py  prompt.py  protocol.py  question.py  study.py
src/boterview/chat/: chat.py
src/boterview/cli/: cli.py
src/boterview/cli/commands/: generate.py  preview.py  run.py
src/boterview/context/: app.py  content.py  path.py
src/boterview/helpers/: authentication.py  chat.py  storage.py  utils.py
src/boterview/models/database/: base.py
src/boterview/server/: api.py  sever.py
src/boterview/services/boterview/: boterview.py  closing.py  condition.py  conversation.py  guide.py  interview.py  introduction.py  participant.py  prompt.py  protocol.py  question.py  study.py
src/boterview/services/configuration/: configuration.py  template.py
(+1 files in other folders)
