[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boterview"
version = "0.0.1"
authors = [
  { name="Mihai Constantin", email = "mihai@mihaiconstantin.com" },
  { name="Erwin Gielens", email = "erwin.gielens@gmail.com" }
]
description = "Easily deploy chatbot-based interviews with customizable protocols and randomized condition assignment for social science research."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "openai",
  "chainlit"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mihaiconstantin/boterview"
Issues = "https://github.com/mihaiconstantin/boterview/issues"
